--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.2.14",
+    "@angular/cdk": "^12.1.3",
     "@angular/common": "~11.2.11",
     "@angular/compiler": "~11.2.11",
     "@angular/core": "~11.2.11",
@@ -21,11 +22,15 @@
     "@angular/platform-browser-dynamic": "~11.2.11",
     "@angular/router": "~11.2.11",
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@google-cloud/firestore": "^4.13.2",
     "firebase": "^7.0 || ^8.0",
+    "firebase-admin": "^9.11.0",
+    "google-auth-library": "^7.3.0",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.4.2",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
