--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^7.0 || ^8.0",
     "firebase-admin": "^9.11.0",
     "google-auth-library": "^7.3.0",
+    "moment": "^2.29.1",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.4.2",
