--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/router": "~11.2.11",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@google-cloud/firestore": "^4.13.2",
+    "chart.js": "^2.9.4",
     "firebase": "^7.0 || ^8.0",
     "firebase-admin": "^9.11.0",
     "google-auth-library": "^7.3.0",
+    "mapbox-gl": "^2.5.1",
     "moment": "^2.29.1",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
