--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,9 @@
               "node_modules/primeicons/primeicons.css",
               "./node_modules/primeflex/primeflex.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/chart.js/dist/Chart.js"
+            ]
           },
           "configurations": {
             "production": {
