--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@fortawesome/angular-fontawesome": "^0.10.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@google-cloud/firestore": "^4.13.2",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "chart.js": "^2.9.4",
     "firebase": "^7.0 || ^8.0",
     "firebase-admin": "^9.11.0",
